fix nav button mobile transfer

--- a/src/pages/transfer/transfer.css
+++ b/src/pages/transfer/transfer.css
@@ -76,13 +76,17 @@
     z-index: 999; 
     background-color: #ffffff;
     width: 100%;
-
     padding-right :30px;
     padding-left :30px;
 }
 
+
+.p-balance-dekstop{
+    display: contents ;
+}
+
 .button-back {
-    margin-top: 8px;
+    margin-top: -2px;
 }
 
 a {
@@ -92,6 +96,9 @@ a {
 @media only screen and (max-width: 768px) {
 
 
+    .but-mobile{
+        width: 100% !important;
+    }
     .content-container {
         background-color: #ffffff;
         padding-bottom: 0px !important;
@@ -142,7 +149,7 @@ a {
     }
 
     .p-balance-dekstop {
-        display: none ;
+        display: none !important ;
     }
 
     .p-balance-mobile {
@@ -152,7 +159,7 @@ a {
 
     .p-balance-mobile-receiver {
         display: flex  !important;
-        color: black !important;
+        color: #7C7895  !important;
     }
 
     .custom-button-tf {
